Fri Oct 31 18:57:15 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/transport/ReliableMulticast/detail/EventHandler.cpp:

          Fixed a potential deadlock that send thread and reactor event
          thread acquire EventHandler lock and reactor internal lock 
          reversely.
          
        * dds/InfoRepo/DCPS_IR_Publication.cpp:
        * dds/InfoRepo/DCPS_IR_Subscription.cpp:
        * dds/InfoRepo/FederatorManagerImpl.cpp:
        * performance-tests/DCPS/InfoRepo_population/publisher.cpp:
        * tests/DCPS/StatusCondition/StatusConditionTest.cpp:

          Fixed warnings.
          
Fri Oct 31 18:39:03 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * bin/DCPS/CPPTemplate.pm:

          read_next_instance() and take_next_instance() may exit from within
          the for loop.  Call post_read_or_take() in these cases.

Fri Oct 31 17:40:02 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * java/idl2jni/runtime/idl2jni_runtime.rc:
        * java/tao/tao_java.rc:

          Fixed #include paths.

Fri Oct 31 16:21:52 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/ReliableMulticast/ReliableMulticast.rc:
        * dds/DCPS/transport/simpleTCP/SimpleTcp.rc:
        * dds/DCPS/transport/simpleUnreliableDgram/SimpleUnreliableDgram.rc:
        * dds/InfoRepo/DCPSInfoRepo.mpc:
        * dds/InfoRepo/DCPSInfoRepoServ.rc:
        * dds/InfoRepo/Federator.rc:
        * dds/InfoRepo/InfoRepoLib.rc:
        * dds/OpenDDS_DCPS.rc:
        * java/dds/dcps_java.rc:
        * java/idl2jni/runtime/idl2jni_runtime.rc:
        * java/tao/tao_java.rc:

          Added resource files so that Windows DLLs get the version number and
          library description embedded.

Thu Oct 30 23:23:56 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * tests/DCPS/FooTest4/main.cpp:

          Added delay between create_datareader and sub
          delete_contained_entities to avoid test failure on slow