@@ -12,22 +12,43 @@ public class TestPublisher {
 
         DomainParticipantFactory dpf =
             TheParticipantFactory.WithArgs(new StringSeqHolder(args));
+	if (dpf == null) {
+          System.err.println ("Domain Participant Factory not found");
+	  return;
+	}
         DomainParticipant dp = dpf.create_participant(411,
             PARTICIPANT_QOS_DEFAULT.get(), null);
+	if (dp == null) {
+	  System.err.println ("Domain Participant creation failed");
+	  return;
+	}
 
         MessageTypeSupportImpl servant = new MessageTypeSupportImpl();
         servant.register_type(dp, "");
         Topic top = dp.create_topic("Movie Discussion List",
                                     servant.get_type_name(),
                                     TOPIC_QOS_DEFAULT.get(), null);
+	if (top == null) {
+	  System.err.println ("Topic creation failed");
+	  return;
+	}
 
         Publisher pub = dp.create_publisher(PUBLISHER_QOS_DEFAULT.get(), null);
+	if (pub == null) {
+	  System.err.println ("Publisher creation failed");
+	  return;
+	}
 
         //OpenDDS-specific attachment of transport to publisher
-        TransportImpl tcp_impl =
+        TransportImpl transport_impl =
             TheTransportFactory.create_transport_impl(1,
             TheTransportFactory.AUTO_CONFIG);
-        AttachStatus stat = tcp_impl.attach_to_publisher(pub);
+	if (transport_impl == null) {
+	  System.err.println ("Transport implementation creation failed");
+	  return;
+	}
+
+        AttachStatus stat = transport_impl.attach_to_publisher(pub);
         if(stat.value() != AttachStatus._ATTACH_OK) {
             System.err.println ("ERROR: Couldn't attach transport.");
             System.exit(1);
@@ -35,6 +56,10 @@ public class TestPublisher {
 
         DataWriter dw = pub.create_datawriter(top, DATAWRITER_QOS_DEFAULT.get(),
                                               null);
+	if (dw == null) {
+	  System.err.println ("DataWriter creation failed");
+	  return;
+	}
 
         InstanceHandleSeqHolder holder =
             new InstanceHandleSeqHolder(new int[]{});
@@ -53,7 +78,11 @@ public class TestPublisher {
         msg.text = "Worst. Movie. Ever.";
         msg.count = 0;
         for(; msg.count < N_MSGS; ++msg.count) {
-            mdw.write(msg, handle);
+	  int ret = mdw.write(msg, handle);
+	  if (ret != RETCODE_OK.value) {
+	    System.err.println ("ERROR "+ msg.count+ "dth write() returned "+
+				ret+ ".");
+	  }
         }
         //not synching after write, OK?
         try{ Thread.sleep(3000); } catch (InterruptedException ie) {}
