@@ -9,32 +9,58 @@ public class TestSubscriber {
     private static final int N_EXPECTED = 10;
 
     public static void main(String[] args) throws Exception {
+
         DomainParticipantFactory dpf =
             TheParticipantFactory.WithArgs(new StringSeqHolder(args));
+	if (dpf == null) {
+          System.err.println ("Domain Participant Factory not found");
+	  return;
+	}
         DomainParticipant dp = dpf.create_participant(411,
             PARTICIPANT_QOS_DEFAULT.get(), null);
+	if (dp == null) {
+	  System.err.println ("Domain Participant creation failed");
+	  return;
+	}
 
         MessageTypeSupportImpl servant = new MessageTypeSupportImpl();
         servant.register_type(dp, "");
         Topic top = dp.create_topic("Movie Discussion List",
                                     servant.get_type_name(),
                                     TOPIC_QOS_DEFAULT.get(), null);
+	if (top == null) {
+	  System.err.println ("Topic creation failed");
+	  return;
+	}
 
         Subscriber sub = dp.create_subscriber(SUBSCRIBER_QOS_DEFAULT.get(),
                                               null);
+	if (sub == null) {
+	  System.err.println ("Subscriber creation failed");
+	  return;
+	}
 
         //OpenDDS-specific attachment of transport to subscriber
-        TransportImpl tcp_impl =
+        TransportImpl transport_impl =
             TheTransportFactory.create_transport_impl(1,
             TheTransportFactory.AUTO_CONFIG);
-        AttachStatus stat = tcp_impl.attach_to_subscriber(sub);
+	if (transport_impl == null) {
+	  System.err.println ("Transport implementation creation failed");
+	  return;
+	}
+
+        AttachStatus stat = transport_impl.attach_to_subscriber(sub);
         if(stat.value() != AttachStatus._ATTACH_OK) {
             System.err.println ("ERROR: Couldn't attach transport.");
             System.exit(1);
         }
 
         DataReaderListenerImpl listener = new DataReaderListenerImpl();
-        sub.create_datareader(top, DATAREADER_QOS_DEFAULT.get(), listener);
+        DataReader dr = sub.create_datareader(top, DATAREADER_QOS_DEFAULT.get(), listener);
+	if (dr == null) {
+	  System.err.println ("DataReader creation failed");
+	  return;
+	}
 
         while(listener.num_reads () < N_EXPECTED)
             try { Thread.sleep(1000); } catch (InterruptedException ie) {}
